prevent card name text from wrapping

--- a/less/cards.less
+++ b/less/cards.less
@@ -696,6 +696,9 @@
   text-align: center;
   flex: 1;
   line-height: 65px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card-unique {
